--- a/api/vercel.json
+++ b/api/vercel.json
@@ -2,15 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/app.py",
+      "src": "api/app.py",
       "use": "@vercel/python",
       "config": { "runtime": "python-3.12" }
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "backend/app.py"
+      "src": "/(.*)",
+      "dest": "api/app.py"
     }
   ]
 }
